<resources>
    <string name="app_name">SololearnClone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="full_name">Fullname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="dont_you_have_acc">Do not you have an account?</string>
    <string name="already_you_have_acc">Already have an account?</string>
    <string name="check">CHECK</string>
    <string name="true_answer">True</string>
    <string name="false_answer">False</string>
    <string name="java">Java</string>
    <string name="kotlin">Kotlin</string>
    <string name="python">Python</string>
    <string name="c_plus_plus">C++</string>
    <string name="js">JavaScript</string>
    <string name="first_question">Kotlin is the best language</string>
    <string name="second_question">Which are the best programming languages?</string>
    <string name="compiler_question">Let\'s start by making a program to output "Hello World" to the screen </string>
    <string name="drag_drop_question">Drag and Drop from the options below to output "Kotlin is fun".</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry of standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Elettra sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out"> Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>