<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_section"
    tools:context=".fragments.lessons.TaskOneFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.lessons.LessonOneFragment">

        <RelativeLayout
            android:id="@+id/relative_layout_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/second_question"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkbox_java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relative_layout_question"
            android:layout_marginStart="10dp"
            android:text="@string/java"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkbox_kotlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_java"
            android:layout_marginStart="10dp"
            android:text="@string/kotlin"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkbox_Python"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_kotlin"
            android:layout_marginStart="10dp"
            android:text="@string/python"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkbox_cpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_Python"
            android:layout_marginStart="10dp"
            android:text="@string/c_plus_plus"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/checkbox_js"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_cpp"
            android:layout_marginStart="10dp"
            android:text="@string/js"
            android:textColor="@color/white" />

        <RelativeLayout
            android:id="@+id/relative_layout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_js"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btn_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_sing_up_background"
                android:text="@string/check"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>