<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.RegistrationFragment">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/sign_up"
            android:textColor="@color/pink"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/pink"
            app:boxStrokeWidth="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:endIconDrawable="@drawable/ic_check"
            app:endIconMode="none"
            app:endIconTint="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:helperText=""
            app:helperTextTextColor="@color/green"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:maxLength="20"
                android:padding="10dp"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/pink"
            app:boxStrokeWidth="2dp"
            app:endIconDrawable="@drawable/ic_check"
            app:endIconMode="none"
            app:endIconTint="@color/green"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:helperText=""
            app:helperTextTextColor="@color/green"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/layout_full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:padding="10dp"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/phone_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/layout_email">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:ccp_arrowColor="@color/white"
                app:ccp_autoFormatNumber="false"
                app:ccp_contentColor="@color/white"
                app:ccp_defaultNameCode="AM" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                app:endIconDrawable="@drawable/ic_check"
                app:endIconMode="none"
                app:endIconTint="@color/green"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/ic_error"
                app:errorIconTint="@color/red"
                app:errorTextColor="@color/red"
                app:helperText=""
                app:helperTextTextColor="@color/green"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/pink"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            app:errorTextColor="@color/red"
            app:helperText=""
            app:helperTextTextColor="@color/green"
            app:hintTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/phone_relative_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_security"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="25"
                android:padding="10dp"
                android:textColor="@color/white"
                app:passwordToggleTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_pass_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="10dp"
            android:textColor="@color/red"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_pass" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_sing_up_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_pass" />

        <TextView
            android:id="@+id/tv_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:text="@string/already_you_have_acc"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@android:color/transparent"
            android:text="@string/sign_in"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_acc"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
